deployment/manifests-values-addons/application/templates/deployment.yaml
---
# Source: application/templates/deployment.yaml

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: web
    group: com.stakater.platform
    provider: stakater
    version: "1.0.0"
    chart: "application-0.0.13"
    release: "NAMESPACE_NAME-web"
    heritage: "Tiller"
  name: web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
        group: com.stakater.platform
        provider: stakater
        version: "1.0.0"
        chart: "application-0.0.13"
        release: "NAMESPACE_NAME-web"
        heritage: "Tiller"
        app: web
        
    spec:
      containers:
      - name: web
        image: "stakater/stakater-nordmart-web:v0.0.6"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 4200
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 4200
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        
      serviceAccountName: web
