deployment/manifests-values-addons/application/templates/ingress.yaml
---
# Source: application/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  labels:
    app: web
    group: com.stakater.platform
    provider: stakater
    version: "1.0.0"
    chart: "application-0.0.12"
    release: "RELEASE-NAME"
    heritage: "Tiller"
  annotations:
    forecastle.stakater.com/appName: Web-NAMESPACE
    forecastle.stakater.com/expose: true
    forecastle.stakater.com/group: Nordmart
    forecastle.stakater.com/icon: https://github.com/stakater/ForecastleIcons/raw/master/stakater.png
    kubernetes.io/ingress.class: Nordmart
    monitor.stakater.com/enabled: true
    spec:
  rules:
    - host: web-NAMESPACE.DOMAIN
      http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 8080
